# panel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.heavy  README.md  compose.heavy.yml  compose.with-db-backups.yml  entrypoint.heavy.sh
.sqlx/: query-01bddbd18c8366abd5ea071cf6e9b4bef9aee0d0f9fc5c0052bc7072c3d89439.json  query-0bf72c3f476e55ec3f2288d5c56a571076111b8ef4bba41929d5d5b699bb3af8.json  query-20f1176493f134d42aa280cba1cb0bb2c8a6bfb4687956617bcde43f024c4cbe.json  query-3190847c29e7a2cae6451bc5fd055b20fe046d87b1f5ad7f13bf6779ef94990e.json  query-49b72da23320d100c61b6a0b21aa565a10e13f03d672cac597ab5d4d9d4ae2e4.json  query-5133738dba9bc070a54ee13f43537a664a31757285b318cdb0f2a6528ce4b528.json  query-65fc5e1834607a40a1e60ad6d32f68f06de9bfd3000ac898069296a8985445ed.json  query-67f71a35080527aba1393274b11763f69d06f9d4c0470cff2176cf0a908f3ca5.json  query-75d5f1fc033e5cfdd0a3d692d05f31303c2b6b8f1f98ef5029f6908c10b78a16.json  query-8697bf7d409e966f39c3f1de7fe334d0b507ddbafb9a462796f3dce2b7d9f04d.json  query-9310c7d28f46ebf9f667e566c5bd788316f63bae73832bb33114c1b56eaabe56.json  query-9fd8358390147e9cf303a31e9ea1ef6df01e2c757ef704ad0bb15decb8613f6f.json  query-a26402c8d941fed33283a9b1b5253233e741b505052cb5e7e3d595abea62b257.json  query-c7903092c5562bd3008dc895d471a020cbd0533cb3e2752efe1685cdf36fd3a4.json  (+8 more)
.zed/: settings.json
database-migrator/: Cargo.toml  build.rs
database-migrator/src/: lib.rs  main.rs
database-migrator/src/commands/: migrate.rs  mod.rs  status.rs  version.rs
rule-validator/: Cargo.toml
rule-validator/src/: lib.rs  rules.rs
(+1196 files in other folders)
