[package]
name = "database-migrator"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
include_dir = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
