[package]
name = "rule-validator"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
garde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
compact_str = { workspace = true }
